--- a/wheather.html
+++ b/wheather.html
@@ -6,6 +6,8 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
+      background-color:black;
+      color:white;
     }
 
     h1 {
